Added day 5 - part 2 done.